--- a/Areas/General/Pages/FetchData.razor
+++ b/Areas/General/Pages/FetchData.razor
@@ -1,11 +1,14 @@
 ﻿@page "/fetchdata"
-@inject HttpClient HttpClient
-@using AdafyBlazorApp.Data
+
 <PageTitle>Weather forecast</PageTitle>
+
+@using AdafyBlazorApp.Data
+@inject WeatherForecastService ForecastService
+@inject MatchResultProvider MatchResultProvider
 
 <h1>Weather forecast</h1>
 
-<p>This component demonstrates fetching data from the server.</p>
+<p>This component demonstrates fetching data from a service.</p>
 
 @if (forecasts == null)
 {
@@ -37,24 +40,11 @@ else
 }
 
 @code {
-
     private WeatherForecast[]? forecasts;
 
     protected override async Task OnInitializedAsync()
     {
-        forecasts = await HttpClient.GetFromJsonAsync<WeatherForecast[]>("sample-data/weather.json");
-        
-        var test = await new MatchResultProvider(HttpClient).GetMatchResultFromServer();
-    }
-
-    public class WeatherForecast
-    {
-        public DateTime Date { get; set; }
-
-        public int TemperatureC { get; set; }
-
-        public string? Summary { get; set; }
-
-        public int TemperatureF => 32 + (int)(TemperatureC / 0.5556);
+        forecasts = await ForecastService.GetForecastAsync(DateTime.Now);
+        //var data = await MatchResultProvider.GetMatchResultFromServer();
     }
 }
