--- a/Areas/General/Pages/Index.razor
+++ b/Areas/General/Pages/Index.razor
@@ -1,9 +1,7 @@
 ﻿@page "/"
 
-<PageTitle>Index</PageTitle>
+<PageTitle>Koti</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>Tervetuloa!</h1>
 
-Welcome to your new app.
-
-<SurveyPrompt Title="How is Blazor working for you?" />
+Tervetuloa otteluiden tulosten seurannan ohjelmaan!
