--- a/Areas/General/Pages/MatchDetails.razor
+++ b/Areas/General/Pages/MatchDetails.razor
@@ -6,19 +6,19 @@
 <PageTitle>Ottelun tiedot</PageTitle>
 @if(loaded)
 {
-    <h1>@detailMatch.MatchDate</h1>
+    <h1>Ottelun päivämäärä: @detailMatch.MatchDate</h1>
     <br />
     <br />
     <br />
     <div class="container">
         <div class="row">
 
-        <div class="col" style="display:inline-block">
+        <div class="col" >
             <img src=@detailMatch.HomeTeam.LogoUrl.ReplaceUrlProtocolToSecure() />
             <h2 style="text-align:center">@detailMatch.HomeTeam.Name</h2>
 
         </div>
-        <div class="col" style="display:inline-block;">
+        <div class="col" >
             <img src=@detailMatch.AwayTeam.LogoUrl.ReplaceUrlProtocolToSecure() />
             <h2 style="text-align:center">@detailMatch.AwayTeam.Name</h2>
 
@@ -26,10 +26,35 @@
         </div>
     </div>
 
-    <table>
+    @if(detailMatch.MatchEvents.Any())
+    {
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    <th>Tapahtuman ajankohta</th>
+                    <th>Tapahtuma</th>
+                    <th>Tapahtuman kuvaus</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach(var matchevent in detailMatch.MatchEvents)
+                {
+                    <tr>
+                        <td>@TimeSpan.FromMinutes(matchevent.EventMinute)</td>
+                        <td>
+                            <img alt="test" class="matchEventIcon" src=@matchevent.EventTypeIcon>
+                        </td>
+                        <td>@matchevent.Description</td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    }
+    else
+    {
+        <span>Ottelun tapahtumista ei ole tietoja</span>
+    }
 
-    </table>
-    
 }
 
 @code {
