--- a/Areas/General/Pages/MatchDetails.razor.css
+++ b/Areas/General/Pages/MatchDetails.razor.css
@@ -1,6 +1,12 @@
 ﻿img {
     height: 256px;
     width: 256px;
-    margin-left: auto;
-    margin-right: auto;
+}
+.col {
+    text-align:center;
+}
+
+.matchEventIcon {
+    height: 64px;
+    width: 64px;
 }
