--- a/Areas/General/Pages/MatchList.razor
+++ b/Areas/General/Pages/MatchList.razor
@@ -12,7 +12,7 @@
 
 @if(loaded)
 {
-    <table id="match_table" class="table table-striped table-hover">
+    <table class="table table-striped table-hover">
         <thead>
             <tr>
                 <th>Päivämäärä</th>
