--- a/Areas/General/Shared/NavMenu.razor
+++ b/Areas/General/Shared/NavMenu.razor
@@ -16,12 +16,12 @@
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="matchlist">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Ottelut
+                <span class="oi oi-spreadsheet" aria-hidden="true"></span> Ottelut
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
+                <span class="oi oi-globe" aria-hidden="true"></span> Sijoitukset
             </NavLink>
         </div>
     </nav>
