Team ranking page

--- a/Areas/General/Pages/MatchDetails.razor
+++ b/Areas/General/Pages/MatchDetails.razor
@@ -42,7 +42,7 @@
                     <tr>
                         <td>@TimeSpan.FromMinutes(matchevent.EventMinute)</td>
                         <td>
-                            <img alt="test" class="matchEventIcon" src=@matchevent.EventTypeIcon>
+                            <img class="matchEventIcon" src=@matchevent.EventTypeIcon>
                         </td>
                         <td>@matchevent.Description</td>
                     </tr>
