--- a/Areas/General/Shared/NavMenu.razor
+++ b/Areas/General/Shared/NavMenu.razor
@@ -20,7 +20,7 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
+            <NavLink class="nav-link" href="rankings">
                 <span class="oi oi-globe" aria-hidden="true"></span> Sijoitukset
             </NavLink>
         </div>
